# simple_impl_derive

./: .gitignore  Cargo.toml
src/: lib.rs  type_helpers.rs
